--- a/Blog/wwwroot/css/site.css
+++ b/Blog/wwwroot/css/site.css
@@ -1,4 +1,5 @@
-﻿body {
+﻿
+body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
@@ -34,4 +35,95 @@ textarea {
     .carousel-caption {
         display: none;
     }
+}
+
+#breadcrumb {
+    border-bottom: 1px solid #ccc;
+}
+
+.breadcrumb {
+    padding: 8px 0;
+    margin: 10px 0;
+    list-style: none;
+    background-color: transparent;
+    border-radius: 4px;
+    font-weight: 700;
+}
+
+    .breadcrumb > li {
+        display: inline-block;
+    }
+
+        .breadcrumb > li + li:before {
+            padding: 0 5px;
+            color: #ccc;
+            content: "/\00a0";
+        }
+
+.panorama {
+    width: 100%;
+    height: 280px;
+    position: relative;
+    z-index: 5;
+    overflow: hidden;
+}
+
+    .panorama img:first-of-type {
+        -webkit-animation: slide-1 150s linear infinite;
+        animation: slide-1 150s linear infinite;
+    }
+
+    .panorama img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+
+        .panorama img:last-of-type {
+            left: 2884px;
+            -webkit-animation: slide-2 150s linear infinite;
+            animation: slide-2 150s linear infinite;
+        }
+
+@keyframes slide-1 {
+    0% {
+        left: 0;
+    }
+
+    100% {
+        left: -2884px;
+    }
+}
+
+@keyframes slide-2 {
+    100% {
+        left: 0;
+    }
+}
+
+a.btn.btn-primary.btn-lg.tag {
+    padding: 5px;
+}
+
+.panel.panel-default {
+    min-height: 200px;
+}
+
+.panel-title {
+    font-size: 18px !important;
+}
+
+.AllCategory .list-group-item {
+    border: none;
+    padding: 10px;
+}
+
+    .AllCategory .list-group-item span.badge {
+        background: #2196f3;
+    }
+
+.AllCategory .col-lg-6 {
+    padding: 5px;
 }
