add highlight for code

--- a/Blog/Views/Management/CreateArticle.cshtml
+++ b/Blog/Views/Management/CreateArticle.cshtml
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 @section Scripts{
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.7/summernote.js"></script>
+    <script src="~/lib/summernote.js"></script>
 }
 
 <div class="container">
