--- a/Blog/Views/Shared/SH.cshtml
+++ b/Blog/Views/Shared/SH.cshtml
@@ -16,7 +16,7 @@
         border-radius: 0;
     }
 </style>
-<pre>
+@*<pre>
     <code class="CSS">
     .test{
         color:red;
@@ -43,7 +43,7 @@
     <code class="XML">
     &lt;absoluteLayout Text="Test"&gt;&lt;/absoluteLayout&gt;
     </code>
-</pre>
+</pre>*@
 
 <script>
     $(document).ready(function() {
