--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -65,5 +65,7 @@
         </footer>
     </div>
     @Html.Partial("SH")
+@*<script src="~/lib/instantClick.js" data-no-instant></script>
+<script data-no-instant>InstantClick.init();</script>*@
 </body>
 </html>
