--- a/Blog/Views/Home/Index.cshtml
+++ b/Blog/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
     </style>
     <script src="~/lib/particles.min.js"></script>
     <div class="headDecoration">
-        <h3>технические решения, проверенные на личном опыте</h3>
+        @*<h3>технические решения, проверенные на личном опыте</h3>*@
         <div id="particles-js"></div>
     </div>
     <script>
@@ -41,21 +41,22 @@
 
             @foreach (var article in Model.Articles)
             {
-                <div>
-                    <!-- Title -->
-                    <h1 class="mt-4">
-                        <a asp-action="Index" asp-controller="Article" asp-route-id="@article.Id">
-                            @article.Title
-                        </a>
-                    </h1>
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <!-- Title -->
+                        <h3 class="mt-4">
+                            <a asp-action="Index" asp-controller="Article" asp-route-id="@article.Id">
+                                @article.Title
+                            </a>
+                        </h3>
 
-                    <!-- Author -->
-                    <p class="lead" style="float: left;">
-                        by
-                        <a href="#">@article.Author</a>
-                    </p>
-                    <div class="row" style="float: right;">
-                        @*<div style="padding-left: 15px">
+                        <!-- Author -->
+                        <p class="lead" style="float: left;">
+                            by
+                            <a href="#">@article.Author</a>
+                        </p>
+                        <div class="row" style="float: right;">
+                            @*<div style="padding-left: 15px">
                             @if (!string.IsNullOrEmpty(article.Tags))
                             {
                                 <span class="glyphicon glyphicon-bookmark"></span>
@@ -65,23 +66,23 @@
                                 }
                             }
                         </div>*@
-                        <div style="padding-left: 15px">
-                            @*<span class="glyphicon glyphicon-pencil"></span> <a href="singlepost.html#comments">20 Comments</a>*@
-                            <span class="glyphicon glyphicon-time"></span>
-                            @Html.Partial("DateTimeFormat", article.Date)
+                            <div style="padding-left: 15px; padding-right: 15px;">
+                                @*<span class="glyphicon glyphicon-pencil"></span> <a href="singlepost.html#comments">20 Comments</a>*@
+                                <span class="glyphicon glyphicon-time"></span>
+                                @Html.Partial("DateTimeFormat", article.Date)
 
+                            </div>
                         </div>
-                    </div>
-                    <div class="clearfix"></div>
+                        <div class="clearfix"></div>
 
-                    <!-- Post Content -->
-                    <div>
-                        @Html.Raw(article.ShortDescription)
+                        <!-- Post Content -->
+                        <div>
+                            @Html.Raw(article.ShortDescription)
+                        </div>
+                        <p class="text-right">
+                            <a asp-action="Index" asp-controller="Article" asp-route-id="@article.Id">Читать</a>
+                        </p>
                     </div>
-                    <p class="text-right">
-                        <a asp-action="Index" asp-controller="Article" asp-route-id="@article.Id">Читать</a>
-                    </p>
-                    <hr>
                 </div>
             }
             @await Component.InvokeAsync("Paginator", Model.PageViewModel)
